@@ -1,5 +1,6 @@
 - Mounts used in a session are now memorized, and won't be summoned again until all mounts in the same category have been used.
 - Added a button that can be used to combine gems and use threads on Remix.
+  - Author's Note: _This button currently only supports Baganator and the base UI. If you would like your addon to be supported, please open an issue._
 - Added gossip and quest merchant support for Exile's Reach for both factions and all classes.
 - Players can now reset character configuration by clicking the button in the settings. This will allow you to re-execute New Character configuration for existing characters when you make changes.
 - The heirloom button has been temporarily disabled.
